# wplctools

./: .gitignore  LICENSE  README.md  build.bat  setup.cfg  setup.py  z.py
src/cpp/: _device.cpp  _lexer.h  gen.py  test.bat  z.cpp
src/cpp/_binaryio/: lib.cpp
src/cpp/mx5/: gen.py  lib.cpp
src/wplctools/: __init__.py  __main__.py  clipboard.py  device.py  utils.py
src/wplctools/eelink/: __main__.py  act5.py  main.py  mc.py
src/wplctools/melsec/: __init__.py  bcode.py  clipboard.py  device.py  gxw.py
src/wplctools/mx5/: ActDefine.py  __init__.py  _mx5.pyi
src/wplctools/tools/: viewer.py
tests/: test_bcode.py  test_device.py  test_mx5.py
