[metadata]
name = wplctools
version = 0.1.0
description = "wolf's PLC tools"
long_description = file: README.md
long_description_content_type = text/markdown
author = LSY
author_email = grizlupo@daum.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    homepage = https://github.com/HumanAndSystem/wplctools

[options]
packages = find:
install_requires =
    olefile>=0.46
    pybind11>=2.9.2
python_requires = >=3.10
package_dir =
    =src
test_suite = tests

[options.packages.find]
where = src

[build_ext]
inplace=1